- made project-summary shorter on mobile devices to always have the title "Project Documentation" visible below it. User feedback showed that having the project-summary take up the entire height made it feel like there was no content below it. This change should fix that and make it more obvious that project-summary isn't the only element on the projects page

--- a/src/app/pages/projects/project-summary-base/project-summary-base.scss
+++ b/src/app/pages/projects/project-summary-base/project-summary-base.scss
@@ -5,9 +5,13 @@ mat-card-header {
 }
 
 mat-card-content {
-  min-height: 70vh;
-  max-height: 70vh;
+  height: calc(70dvh - #{customVariables.$desktop-toolbar-height});
+  min-height: 450px;
   overflow-y: scroll;
+
+  @media only screen and (max-width: customVariables.$mobile-max-width) {
+    height: calc(50dvh - #{customVariables.$mobile-toolbar-height});
+  }
 }
 
 .side-by-side {
